--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Business Card</title>
 </head>
 <body>
@@ -26,7 +30,9 @@
                     <h3 id="price-num">$149.99 </h3>
                     <span id="del"><del>169.99</del></span>
                 </div>
-                <button class="btn">Add to Cart</button>
+                
+                <button class="btn"><i class="fa-solid fa-cart-shopping"></i>    Add to Cart</button>
+                
             </div>
         </div>
     </div>
